--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
-    <style>
-      * {
-        text-decoration: none 
-      } 
-    </style>
-    <title>CRUD in Mern Stack</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200&display=swap" rel="stylesheet">
+  <style>
+    * {
+      text-decoration: none;
+      font-family: 'Roboto Flex', sans-serif;
+    }
+  </style>
+  <title>CRUD in Mern Stack</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
